--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ exclude:
 timezone: Asia/Seoul
 
 # Site settings
-title: 김동균의 Blog
-subtitle: "Stuyding Computer Vision, Deep learning"
+title: Kim Dongkyun
+subtitle: "Studying Computer Vision, Deep learning"
 email: notou1000@gmail.com
 name: Dong Kyun
 description: >
